叩き台作成

--- a/articles/75a34e593989ac.md
+++ b/articles/75a34e593989ac.md
@@ -12,15 +12,49 @@ published: false
 
 ## はじめに：見積りの重要性と難しさ
 
+- なぜこの本を読もうと思ったのか？
+  - 自身が見積もりを考える際にその精度に悩んでいたから
+  - 最初の概算見積もりからブレ幅が大きい
+  - 細かな目標設定がなく、マイルストーンを目的とした計画となり、チームメンバーのモチベーション低下にもつながる
+
 ## 「アジャイルな見積りと計画づくり」の構成
 
-書籍全体の構成について記載。スクラムという言葉が出てこない
+大きく7部構成となっている
+
+- 第1部　問題とゴール
+- 第2部　規模を見積もる
+- 第3部　価値のための計画づくり
+- 第4部　スケジュールを立てる
+- 第5部　トラッキングと情報共有
+- 第6部　なぜアジャイルな計画づくりがうまくいくのか
+- 第7部　ケーススタディ
+
+
+
+## 見積もりと計画づくり
 
 見積もりについて、有名な図として本書の1章でも触れられる不確実性コーンがあります。
 
 ![不確実性コーン](https://storage.googleapis.com/zenn-user-upload/3b483936e68c-20240816.jpg)
 
 引用：[日経XTECH プロジェクトの本質とはなにか](https://xtech.nikkei.com/it/article/COLUMN/20131001/508039/)
+
+
+上図からわかるようにプロダクトスケジュールのうち初期コンセプトの時点では見積もりに大きな幅があることがわかる
+
+この図を見るときに
+「初期コンセプト時点では幅が大きいため、見積もり幅に大きな誤差が生まれても仕様がない」
+「超概算見積もりは当てにならない」
+ということを言うために使われることが多い。
+
+しかし、もっと大事なこととして、
+
+> プロジェクトが進むにつれてより正確に見積もれるようになる。こうして見積もりが徐々に調整されていく様子を示すのが不確実性コーンである （p35）
+
+とあります。
+この図から学ぶことはプロジェクトを進めることで見積もりをより精緻化することができると言うことです。
+
+
 
 本書では「よい計画づくり」を以下のような特徴を持った**プロセス**と定義しています。
 
@@ -35,28 +69,109 @@ published: false
 > 計画とはドキュメントや図表であり、ある地点でのスナップショットを記録したものだ（p33）
 
 その上でアジャイルな計画とは、「積極的に変更したい」と思うもの
+
 変更が起きるということはすなわち、何かを学習したり過ちに気づいたことを意味するからだ。
 
 > 立てた計画はじきに見直され破棄されてしまう。しかし、計画づくりの過程で得た知識や洞察はずっと後まで残る。（p34）
 
+そのため本書では計画よりもそのプロセスである「計画づくり（planning）」を重視している。
 
 
 ## 個人的に記憶に残った箇所
 
-### スパイク
+### スパイク (14章 イテレーション計画づくり)
+
+調査用のタスクの名前
+何となく技術調査でチケットは切っていたが、具体的な名前は恥ずかしながら知らなかった。
+
+#### 参考
+[スクラムにおける技術的スパイクの進め方 | Ryuzee.com](https://qiita.com/dodonki1223/items/8c3928ee5e9384930d34)
+
+### コミットメント駆動のイテレーションプランニング(14章 イテレーション計画づくり)
+
+本書ではイテレーションの計画で大きく「ベロシティ駆動」と「コミットメント駆動」の2つを挙げている。
+一般的なイテレーション計画では「ベロシティ駆動」を利用した計画づくりが多い気がしているが、著者はコミットメント駆動をお勧めしていた。
+ベロシティは見積もりとしての粒度が荒いこと、ストーリーを見積もりSP（ストーリーポイント）や理想日は誤差があり、それを慣らすには1イテレーションで多くのチケットを消化する必要があるがそれは現実的ではない、ということを理由に挙げていた。
+
+リリース計画 → ベロシティ
+イテレーション計画 → コミットメント
+
+をお勧めしているということは意外に感じた。
+
+### プロジェクトバッファ(17章 不確実性に備えるバッファの計画)
+
+二乗和平方根法を使うことを強くおすすめされていたのが印象的だった。具体的な手法が出てきたため。
+
+### ガントチャート(21章 計画とコミュニケーション)
+
+ガントチャートはなぜ嫌われているのか？
+→スケジュールのタスク予想とスケジュール調整に使われてきたことにより抵抗を感じる。
+（アジャイルな計画づくりとの相性が悪い）
+だが、フィーチャー分割構成として、イテレーションにフィーチャーを割り当てた機能を一覧化する上ではとても役にたつ。そのほかにも以下のようなガントチャートであればお勧めされていた。
+
+- イテレーション全体の期間である
+- 担当者（リソース）の割り当てを書かない
+
+### イテレーション終了報告書(21章 計画とコミュニケーション)
+
+著者はイテレーション終了時に終了報告書を記載するといったことを言っている。
+
+- 日程
+- 要員
+- 指標
+- 実施内容と評価  
+
+必須ではないが最新情報をステークホルダーに報告し、後から過去のイテレーション記録として参照するためにも便利だと言っている
+作ってみても良いかもと思った
 
 
-### コミットメント駆動のいてレーションプランニング
+### なぜアジャイルな計画づくりがうまくいくのか (22章 なぜアジャイルな計画づくりがうまくいくのか)
 
-### 22章「なぜアジャイルな計画づくりがうまくいくのか」
+「第6部　なぜアジャイルな計画づくりがうまくいくのか」は1つの章立て（第22章）のみの部となっています。
+こちらは、第2章の「なぜ計画づくりに失敗するのか」と対になった形での章立てとなっています。
 
-規模の見積もりと期間の見積もりを分離している
-「規模を見積もり、期間は導出する」
+ここまで読んできたアジャイルな計画づくり手法のまとめとなっているのですが、
+逆にいうとこの章に書かれている内容ができていない場合は、アジャイルな計画づくりに課題を抱えていることのチェックリストにもなります。
 
-イテレーションから仕掛かり作業を持ち越さない
+####  規模の見積もりと期間の見積もりを分離している
 
-### 23章 ケーススタディ
+「規模を見積もり、期間は導出する」という言葉が何度も本書では出てきます。
+それほど、規模の見積もりと期間の見積もりは混合されてしまう危険性があるものだからだと思います。
+自分自身もここの分離が非常に大切だということは分かりつつ、混合してしまうことが多々あります。
 
-## まとめと今後の展望
+なぜだろうと考えたときに「第８章 ストーリーポイントと理想日」の中にそのヒントがありました。
+
+> 理想日はプロジェクト関係者に説明しやすい (p96)
 
 
+#### イテレーションから仕掛かり作業を持ち越さない
+
+これについても自分自身耳が痛い部分でした。
+本書では仕掛かり作業を絶対にするなと言っている訳ではありません
+
+> 「実際に継続することも多いが、必ず継続するというわけでもない。作業についてこう考えることで、新しいイテレーションの開始時点に仕掛かり作業を残さないようにする効果が働く」
+
+## まとめと今後への活かし方について
+
+本書の帯には、以下の文書が書かれています。
+
+> 見積もりと計画づくりがアジャイルでないのに、プロジェクトがアジャイルであるということはありえない
+
+それに対して、本書最後の訳者あとがきには、以下のように書いてあります。
+
+> 「見積もりと計画づくりをアジャイルに」しさえすれば、プロジェクトはアジャイルになるのでしょうか？　残念ながらその答えは「いいえ」です。
+
+その上で重要なことは、**技術とビジネスの調和**だと訳者の方はおっしゃっています。
+
+> 重要なのは、技術とビジネスの調和です。開発者には自分たちで見積もりを出す権利があります。しかし同時に、見積りの説明責任を果たすために、誠実で透明性のある進捗を報告する義務があります。顧客やプロダクトオーナーには要求を出す権利がありますが、要求がリリースやイテレーションに収まらない場合には、優先順位の決断を下す義務もあります。
+
+> 見積りと計画づくりはまさに「チームが技術とビジネスの関心事項」を調和させるための場です。そしてアジャイルな見積もりと計画づくりは、これをプロジェクト期間全体を通じて繰り返すことで「調和を日常的に取れるように」する営みです。
+
+こちらについてはその通りだなと思い、また「8章 ストーリーポイントと理想日」の中に記載されていた以下を思い出した。
+
+> ストーリーポイントを採用した場合は、プロジェクトの部外者に（最初はプロジェクトメンバーにも）、規模の見積もりという考え方を説明しなければならない。しかし、これは**チャンス**でもある。ストーリーポイントを説明するということは、同時にプロジェクトで採用する見積もりと計画づくりの概念と手法を説明することでもあるのだ。
+
+果たして、自分は見積りの説明責任を果たすために、誠実で透明性のある進捗を報告できていただろうか？「全員が一丸となって取り組む」チームを目指しての動きがとして何ができるだろうか？
+そう言った処を考えさせられた一冊でした。
+
+イテレーション終了報告書を作ってみようかなと思いました！
