各章の概要を追記

--- a/articles/75a34e593989ac.md
+++ b/articles/75a34e593989ac.md
@@ -48,18 +48,25 @@ published: false
 - 第7部　ケーススタディ
 
 ### 第1部　問題とゴール
+この部では、見積りと計画づくりがなぜ難しいのか、そしてそれを克服するためにアジャイルなアプローチがどのように役立つかを説明しています。アジャイルの目的は、変化に対応しながらも価値を最大化することであり、そのための問題意識と目標設定が重要であることを強調しています。
 
 ### 第2部　規模を見積もる
+ここでは、プロジェクトの規模をどのように見積もるかについて詳しく解説されています。本書では、規模の見積もりと期間の見積もりを明確に区別する重要性が何度も強調されており、特にストーリーポイントと理想日を用いた方法が紹介されています。これにより、より精度の高い見積もりを実現するための手法が提示されています。
 
 ### 第3部　価値のための計画づくり
+この部では、プロジェクトでどの機能やタスクに優先順位をつけるべきかを考えるための手法が紹介されています。アジャイルでは、価値を最大化するために、優先順位を適切につけることが重要です。どのように価値を評価し、計画に反映させるかについての具体的なアプローチが示されています。
 
 ### 第4部　スケジュールを立てる
+ここでは、リリース計画やイテレーションごとのスケジュールを立てる方法が紹介されています。リリースとイテレーションは異なるスパンで計画されるべきであり、それぞれに適したスケジュール策定の手法が説明されています。計画を立てる際のポイントや注意点が整理されています。
 
 ### 第5部　トラッキングと情報共有
+この部では、策定したアジャイルな計画をどのように追跡し、ステークホルダーに適切に共有するかがまとめられています。計画が進行する中で、情報の透明性を保ちつつ、進捗を効果的にトラッキングするためのツールや方法が具体的に紹介されています。
 
 ### 第6部　なぜアジャイルな計画づくりがうまくいくのか
+この部は一章のみで構成されており、第2章で説明された「通常の計画づくりがうまくいかない理由」と対比しながら、アジャイルな計画づくりが成功する理由を解説しています。この章をチェックリストとして活用することで、自分たちの計画がアジャイルなプロセスに沿っているかどうかを確認できる内容となっています。
 
 ### 第7部　ケーススタディ
+この部では、小説仕立てで具体的なプロジェクト開発が描かれ、これまでの章で紹介された理論や手法がどのように実践されるかが示されています。実際のケースに即した解説が加わることで、理論がどのように現場で活かされるのかが理解しやすくなっています。
 
 ## 見積もりと計画づくり
 
