--- a/articles/75a34e593989ac.md
+++ b/articles/75a34e593989ac.md
@@ -10,10 +10,11 @@ published: false
 
 お盆休みに会社から借りていた[アジャイルな見積りと計画づくり ～価値あるソフトウェアを育てる概念と技法～](https://www.amazon.co.jp/%E3%82%A2%E3%82%B8%E3%83%A3%E3%82%A4%E3%83%AB%E3%81%AA%E8%A6%8B%E7%A9%8D%E3%82%8A%E3%81%A8%E8%A8%88%E7%94%BB%E3%81%A5%E3%81%8F%E3%82%8A-%EF%BD%9E%E4%BE%A1%E5%80%A4%E3%81%82%E3%82%8B%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2%E3%82%92%E8%82%B2%E3%81%A6%E3%82%8B%E6%A6%82%E5%BF%B5%E3%81%A8%E6%8A%80%E6%B3%95%EF%BD%9E-Mike-Cohn-ebook/dp/B00IR1HYGW/ref=sr_1_1?adgrpid=60120324664&dib=eyJ2IjoiMSJ9.h2QOScskADoBOPa2gQuUvCGHOEjitfjLMc2J6UCFIR-3Z8WcATR-TufQbEQA8XP0WdPXsyCLdFAoWrs-XmraRtCjVTrRBFhHdvxuTMwEUzcS4i4TDDks1keGBWfH2RFFnT9Wied-FkgAPi_JXKnIDzpxluXMIm59kugLlGEVHtqrHYJ9zYTcDDWgd_812wtUoTej_tBMc2IyNmRrMGUyxrSnenWxKeixkng9-dsPe1IxViKlwhRPC7KoGUY37kM_LBQEbsENVWm3_lxDPyiJb9zoxgkeySA0cDGAlg9xnaA.f6Sz97-87e8gKzR7ktu0BEEe3g0Tx61AT-IEpEpyzv4&dib_tag=se&hvadid=678984364920&hvdev=c&hvlocphy=1028852&hvnetw=g&hvqmt=e&hvrand=270821075456580148&hvtargid=kwd-387852356847&hydadcr=27268_14738581&jp-ad-ap=0&keywords=%E3%82%A2%E3%82%B8%E3%83%A3%E3%82%A4%E3%83%AB%E3%81%AA%E8%A6%8B%E7%A9%8D%E3%82%8A%E3%81%A8%E8%A8%88%E7%94%BB%E3%81%A5%E3%81%8F%E3%82%8A&qid=1723795320&sr=8-1)を読み返してみました。
 
-本書は2009年に翻訳されて発売された名著で内容は多くの書評記事で取り上げられていますが、私自身が抱えていた課題と本書から得た学びを備忘録としてまとめたいと思います。
+本書は2009年に翻訳されて発売されて多くの書評記事で取り上げられています。
+今回は私自身が抱えていた見積もりに対する課題と本書から得た学びを備忘録としてまとめたいと思います。
 
 
-※弊社の書籍購入制度については以下ブログもよんでみてくださいー！  
+（※弊社の書籍購入制度については以下ブログもよんでみてください！）  
 [エンジニア組織の書籍購入数が5.5倍になった話](https://medium.com/nextbeat-engineering/%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%8B%E3%82%A2%E7%B5%84%E7%B9%94%E3%81%AE%E6%9B%B8%E7%B1%8D%E8%B3%BC%E5%85%A5%E6%95%B0%E3%81%8C5-5%E5%80%8D%E3%81%AB%E3%81%AA%E3%81%A3%E3%81%9F%E8%A9%B1-bc99427b8e41)
 
 
@@ -21,18 +22,17 @@ published: false
 
 
 ## はじめに：見積りの重要性と難しさ
-なぜこの本を読もうと思ったのかというと、単刀直入に見積りに対する悩みがあったからです。
 
-見積もりという作業自体は職位関係なく（規模感の際はあれど）誰しもが経験せずには通れないことかと思います。
+見積もりという作業は職位関係なく（規模感の差はあれど）誰しもが経験せずには通れないことかと思います。
 
-例えば、初期の概算見積りから大幅にずれが生じたり、計画がマイルストーン中心になりすぎてチームメンバーのモチベーションが低下することがありました。
+例えば、初期の概算見積りから大幅にずれが生じたり、計画がマイルストーン中心となってしまい直近のチームメンバーのモチベーションが低下することがありました。
 
-このような問題は、【ここに具体的なエピソードを追加】のような経験から生まれました。
-
-また最近ここら辺の見積もりに関する記事を見る機会があったので、改めて見積もり周りに関して再度読み直してみようと思った次第でした。
+また最近以下に挙げたような見積もりに関する記事を見る機会があったので、改めて見積もり周りに関して再度読み直してみようと思いました。
 
 ### 参考
 [見積せえへんねやったらどうやって予算取りするねんという話](https://note.com/simplearchitect/n/n1415073eb07a)
+
+
 
 
 ## 「アジャイルな見積りと計画づくり」の構成
@@ -50,8 +50,41 @@ published: false
 ### 第1部　問題とゴール
 この部では、見積りと計画づくりがなぜ難しいのか、そしてそれを克服するためにアジャイルなアプローチがどのように役立つかを説明しています。アジャイルの目的は、変化に対応しながらも価値を最大化することであり、そのための問題意識と目標設定が重要であることを強調しています。
 
+#### 見積もりと計画づくり
+
+見積もりにおいては、不確実性コーンという有名な図があります。（本書の第１章でも触れられています）
+
+
+![不確実性コーン](https://storage.googleapis.com/zenn-user-upload/3b483936e68c-20240816.jpg)
+
+引用：[日経XTECH プロジェクトの本質とはなにか](https://xtech.nikkei.com/it/article/COLUMN/20131001/508039/)
+
+上記の図を一目見てわかる通り、プロダクトスケジュールの初期コンセプト時点では見積もりの幅が非常に大きいことがわかります。
+
+この図は「初期段階での見積り幅に誤差が生じるのは仕方がない」ということを示すためによく使われますが、もっと重要なことはプロジェクトが進むにつれて見積りが精緻化されることです。
+
+> プロジェクトが進むにつれてより正確に見積もれるようになる。こうして見積もりが徐々に調整されていく様子を示すのが不確実性コーンである。（p35）
+
+本書では「よい計画づくり」を以下のような特徴を持った**プロセス**と定義しています。
+
+- リスクを軽減する
+- 不確実性を減らす
+- 意思決定を支援する
+- 信頼を確立する
+- 情報を伝達する
+
+特に、「計画」と「計画づくり（planning）」を明確に区別している点が印象的でした。
+
+> 計画とはドキュメントや図表であり、ある地点でのスナップショットを記録したものだ（p33）
+
+アジャイルな計画づくりでは、計画そのものよりも、その過程を重視しています。計画は変更されるものであり、変更が起きることは学びがあった証拠です。
+
+> 立てた計画はじきに見直され破棄されてしまう。しかし、計画づくりの過程で得た知識や洞察はずっと後まで残る。（p34）
+
 ### 第2部　規模を見積もる
-ここでは、プロジェクトの規模をどのように見積もるかについて詳しく解説されています。本書では、規模の見積もりと期間の見積もりを明確に区別する重要性が何度も強調されており、特にストーリーポイントと理想日を用いた方法が紹介されています。これにより、より精度の高い見積もりを実現するための手法が提示されています。
+ここでは、プロジェクトの規模をどのように見積もるかについて詳しく解説されています。本書では、規模の見積もりと期間の見積もりを明確に区別する重要性が何度も強調されており、特にストーリーポイントと理想日を用いた方法が紹介されています。
+
+ストーリーポイントにおける見積もりは、
 
 ### 第3部　価値のための計画づくり
 この部では、プロジェクトでどの機能やタスクに優先順位をつけるべきかを考えるための手法が紹介されています。アジャイルでは、価値を最大化するために、優先順位を適切につけることが重要です。どのように価値を評価し、計画に反映させるかについての具体的なアプローチが示されています。
@@ -67,37 +100,6 @@ published: false
 
 ### 第7部　ケーススタディ
 この部では、小説仕立てで具体的なプロジェクト開発が描かれ、これまでの章で紹介された理論や手法がどのように実践されるかが示されています。実際のケースに即した解説が加わることで、理論がどのように現場で活かされるのかが理解しやすくなっています。
-
-## 見積もりと計画づくり
-
-見積もりにおいては、不確実性コーンという有名な図があります。（本書のはじめ第１章でも触れられています）
-
-
-![不確実性コーン](https://storage.googleapis.com/zenn-user-upload/3b483936e68c-20240816.jpg)
-
-引用：[日経XTECH プロジェクトの本質とはなにか](https://xtech.nikkei.com/it/article/COLUMN/20131001/508039/)
-
-これにより、プロダクトスケジュールの初期コンセプト時点では見積もりの幅が大きいことがわかります。
-
-この図は「初期段階での見積り幅に誤差が生じるのは仕方がない」ということを示すためによく使われますが、もっと重要なことはプロジェクトが進むにつれて見積りが精緻化されることです。
-
-> プロジェクトが進むにつれてより正確に見積もれるようになる。こうして見積もりが徐々に調整されていく様子を示すのが不確実性コーンである。（p35）
-
-本書では「よい計画づくり」を以下のような特徴を持った**プロセス**と定義しています。
-
-- リスクを軽減する
-- 不確実性を減らす
-- 意思決定を支援する
-- 信頼を確立する
-- 情報を伝達する
-
-特に、「計画」と「計画づくり（planning）」を明確に区別している点が印象的です。
-
-> 計画とはドキュメントや図表であり、ある地点でのスナップショットを記録したものだ（p33）
-
-アジャイルな計画づくりでは、計画そのものよりも、その過程を重視しています。計画は変更されるものであり、変更が起きることは学びがあった証拠です。
-
-> 立てた計画はじきに見直され破棄されてしまう。しかし、計画づくりの過程で得た知識や洞察はずっと後まで残る。（p34）
 
 ## 個人的に記憶に残った箇所
 
