--- a/articles/75a34e593989ac.md
+++ b/articles/75a34e593989ac.md
@@ -18,26 +18,27 @@ published: false
 [エンジニア組織の書籍購入数が5.5倍になった話](https://medium.com/nextbeat-engineering/%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%8B%E3%82%A2%E7%B5%84%E7%B9%94%E3%81%AE%E6%9B%B8%E7%B1%8D%E8%B3%BC%E5%85%A5%E6%95%B0%E3%81%8C5-5%E5%80%8D%E3%81%AB%E3%81%AA%E3%81%A3%E3%81%9F%E8%A9%B1-bc99427b8e41)
 
 
-
-
-
 ## はじめに：見積りの重要性と難しさ
 
-見積もりという作業は職位関係なく（規模感の差はあれど）誰しもが経験せずには通れないことかと思います。
 
-例えば、初期の概算見積りから大幅にずれが生じたり、計画がマイルストーン中心となってしまい直近のチームメンバーのモチベーションが低下することがありました。
+見積もりという作業は、どんなプロジェクトでも避けて通れない課題です。職位や経験に関係なく、プロジェクトに携わるすべての人が直面する挑戦です。
+しかし、まだ行なっていない作業について、具体的な規模や期間を想像して正確に見積もることは、簡単なことではありません。
 
-また最近以下に挙げたような見積もりに関する記事を見る機会があったので、改めて見積もり周りに関して再度読み直してみようと思いました。
+自身の経験としても例えば、初期の概算見積りから大幅にずれが生じたり、計画がマイルストーン中心となってしまい直近のチームメンバーのモチベーションが低下することがありました。
+
+この経験から、私は見積もりの精度を高めることがプロジェクトの成功に直結する重要な要素であることを痛感しました。最近、以下に挙げたような見積もりに関する記事を目にする機会があり、改めて見積もりの技術や考え方について学び直す必要性を感じました。これにより、今後のプロジェクトでより精緻な見積もりを行い、チームの成功に貢献できると考えています。
+
+また最近以下のような見積もりに関する興味深い記事を拝見する機会があったので、改めて見積もり関して興味を持ち、再度こちらの本を読み直してみようと思いました。
 
 ### 参考
 [見積せえへんねやったらどうやって予算取りするねんという話](https://note.com/simplearchitect/n/n1415073eb07a)
 
 
 
-
 ## 「アジャイルな見積りと計画づくり」の構成
 
 本書は7部構成となっています。それぞれの部で、アジャイルにおける見積りや計画の立て方が詳しく説明されています。
+簡単に全体の構成概要を紹介します。
 
 - 第1部　問題とゴール
 - 第2部　規模を見積もる
@@ -81,19 +82,39 @@ published: false
 
 > 立てた計画はじきに見直され破棄されてしまう。しかし、計画づくりの過程で得た知識や洞察はずっと後まで残る。（p34）
 
-### 第2部　規模を見積もる
-ここでは、プロジェクトの規模をどのように見積もるかについて詳しく解説されています。本書では、規模の見積もりと期間の見積もりを明確に区別する重要性が何度も強調されており、特にストーリーポイントと理想日を用いた方法が紹介されています。
+本書が主張しているプロダクトを成長させるために計画「づくり」を継続していくという考え方は、個人的にも良い考え方だなと思いました。
 
-ストーリーポイントにおける見積もりは、
+### 第2部　規模を見積もる
+この部では、プロジェクトの規模をどのように見積もるかについて詳しく解説されています。
+本書では、規模の見積もりと期間の見積もりを明確に区別する重要性が何度も強調されています。
+期間から見積もるのではなく、**規模を見積りその結果から期間を推定する** 方法について知ることができました。
+
+規模の見積もりを行う方法としては、ストーリーポイントと理想日を用いた方法が紹介されています。
+アジャイルやスクラム開発を行っている方についてはストーリーポイントでの見積もりは馴染み深いものなのかと思います。
+（著者の方もストーリ−ポイントでの見積もりを推奨）
+
 
 ### 第3部　価値のための計画づくり
-この部では、プロジェクトでどの機能やタスクに優先順位をつけるべきかを考えるための手法が紹介されています。アジャイルでは、価値を最大化するために、優先順位を適切につけることが重要です。どのように価値を評価し、計画に反映させるかについての具体的なアプローチが示されています。
+この部では、プロジェクトでどの機能やタスクに優先順位をつけるべきかを考えるための手法が紹介されています。
+アジャイルでは、価値を最大化するために、優先順位を適切につけることが重要です。どのように価値を評価し、計画に反映させるかについての具体的なアプローチが示されています。
+
+こちらの章についてはざっと流し読みをした程度なのですが、優先度付けの具体的な手法が紹介されています。
+
+
 
 ### 第4部　スケジュールを立てる
-ここでは、リリース計画やイテレーションごとのスケジュールを立てる方法が紹介されています。リリースとイテレーションは異なるスパンで計画されるべきであり、それぞれに適したスケジュール策定の手法が説明されています。計画を立てる際のポイントや注意点が整理されています。
+この部では、リリース計画やイテレーションごとのスケジュールを立てる方法が紹介されています。リリースとイテレーションは異なるスパンで計画されるべきであり、それぞれに適したスケジュール策定の手法が説明されています。計画を立てる際のポイントや注意点が整理されています。
+
+個人的に現在課題感を感じており、集中して読んだのはこの部でした。
+印象に残った内容については次のセクションに記載しています。
 
 ### 第5部　トラッキングと情報共有
 この部では、策定したアジャイルな計画をどのように追跡し、ステークホルダーに適切に共有するかがまとめられています。計画が進行する中で、情報の透明性を保ちつつ、進捗を効果的にトラッキングするためのツールや方法が具体的に紹介されています。
+
+こちらについても個人的に課題感を感じている箇所であったため、興味深く読まさせていただきました。
+進捗状況の情報共有は個人的にも課題と感じていた。
+バーンダウンチャートやベロシティレポートなどのアジャイルで良く利用されるレポートが紹介されています。
+個人的には次の章にも記載している「イテレーション終了報告書」の作成が印象的でした。
 
 ### 第6部　なぜアジャイルな計画づくりがうまくいくのか
 この部は一章のみで構成されており、第2章で説明された「通常の計画づくりがうまくいかない理由」と対比しながら、アジャイルな計画づくりが成功する理由を解説しています。この章をチェックリストとして活用することで、自分たちの計画がアジャイルなプロセスに沿っているかどうかを確認できる内容となっています。
@@ -103,46 +124,77 @@ published: false
 
 ## 個人的に記憶に残った箇所
 
+ここからは本書を読んで特に個人的に記憶に残った箇所を記載していこうと思います。
+
 ### スパイク (14章 イテレーション計画づくり)
-調査用のタスクの名前を「スパイク」と呼ぶことを、本書で初めて知りました。技術調査でチケットを切る際の呼び名として非常に有用だと感じました。
+調査用タスクの名前を「スパイク」と呼ぶことを、本書で初めて知りました。
+個人的にも技術調査をどのような建て付けで行うかは悩むこともあったので、以下のブログ記事が参考になりました。
+（5. スパイクをプロダクトバックログに入れるか、それともバッファのなかで行うか）
 
 #### 参考
-[スクラムにおける技術的スパイクの進め方 | Ryuzee.com](https://qiita.com/dodonki1223/items/8c3928ee5e9384930d34)
+[スクラムにおける技術的スパイクの進め方 | Ryuzee.com](https://www.ryuzee.com/contents/blog/7121)
 
 
 ### コミットメント駆動のイテレーションプランニング (14章 イテレーション計画づくり)
-一般的には「ベロシティ駆動」が主流ですが、著者は「コミットメント駆動」を勧めています。
 
-その理由は、ベロシティは見積もりとしての粒度が荒く、イテレーションで多くのチケットを消化する必要があるため、現実的ではないことをあげられていました。
+イテレーションの計画には、主に2つのアプローチが紹介されています。
+過去の実績からタスク量を決定する「ベロシティ駆動プランニング」と、チーム全体で合意できる範囲でタスクを設定する「コミットメント駆動プランニング」です。
 
-リリース計画にはベロシティ、イテレーション計画にはコミットメントを使うことを推奨しています。
+一般的には「ベロシティ駆動」が広く採用されていますが、著者は「コミットメント駆動」を推奨しています。
+これは、ベロシティが概算であり、実際のイテレーション中に消化しきれないチケットが生じる可能性があるためです。
+リリース計画にはベロシティが適していますが、イテレーション計画には、チームがコミットできる範囲で計画を立てる方が現実的である旨が述べられていました。
+
+プロジェクトの特性やチームの成熟度に依る部分もあるとはいえ、このような複数のプランニング方法があるということは大きな学びでした。
+
 
 ### プロジェクトバッファ (17章 不確実性に備えるバッファの計画)
 プロジェクトのバッファについて、いつもどの程度のバッファを積めばいいのかが悩みの種でした。  
 これまでは、過去に経験していたプロジェクトなどを参考にしたり、リスク要素を洗い出してどれくらいの大きさになりそうかなど、どちらかというと経験ベースの決め方をしており、何となくモヤっとしてしまっていることが多かったです。
 
-そのようななkで本書では二乗和平方根法を使ったバッファ計画がお勧めの具体的な手法として紹介されていました。
-参考のQitaの記事がまとまっており分かりやすいと思ったのですが、計算内容とともに納得感を持って参考になりました。
+そのような中で本書では二乗和平方根法を使ったバッファ計画がお勧めの具体的な手法として紹介されていました。
+参考のQitaの記事がまとまっており、分かりやすかったです。計算内容とともに納得感を持って理解することができました。
 
 #### 参考
 [[スケジュールに乗せるバッファはどれぐらいが適切か？ - 二乗和平方根法（SRSS法）](https://qiita.com/Hiraku/items/c29ca383fbef8eb38fd2)
 
 
 ### ガントチャート (21章 計画とコミュニケーション)
-ガントチャートはスケジュール調整に使われることが多く、アジャイルな計画づくりとの相性が悪いとされています。しかし、イテレーションにフィーチャーを割り当てる際には有用であり、特定の条件下での使用が推奨されています。
+
+ガントチャートは、ウォーターフォール型のプロジェクト管理でよく使われるツールであり、固定的なスケジュール管理が求められるため、アジャイルには不向きだとされています。
+しかし、イテレーションの進捗状況を可視化するためには、ガントチャートも有効に活用できる場面があります。
+
+特に、ユーザーストーリーの進捗を管理する際には、ガントチャートが役立つと本書では推奨されています。
+以下のポイントに注意することで、アジャイルプロジェクトでも効果的にガントチャートを活用できます。
+
+- ガントチャートは、イテレーション期間ごとにユーザーストーリー単位で管理すること。
+- 担当者をガントチャートに割り振らないこと。
+
+これらのガイドラインを守ることで、ガントチャートをアジャイルにおける柔軟なスケジュール管理ツールとして利用できます。
+
 
 ### イテレーション終了報告書 (21章 計画とコミュニケーション)
-イテレーション終了時に終了報告書を作成することが推奨されています。日程、要員、指標、実施内容と評価を記載し、ステークホルダーに最新情報を伝えるために役立ちます。
+
+イテレーション終了報告書は、チームの進捗状況をまとめ、ステークホルダーに最新情報を伝えるための重要なツールです。
+この報告書には、日程、要員、指標、実施内容、評価などが記載され、プロジェクトの透明性を高める役割を果たします。
+
+著者は、この報告書の作成は必須ではないが、作成することでステークホルダーとの信頼関係を強化できると述べています。
+さらに、週あたり15分程度の時間で作成可能であるため、負担なく導入できる点も魅力です。
+この手軽さから、イテレーションの振り返りとともに報告書の作成を取り入れて、チームとステークホルダーの間でより効果的なコミュニケーションを図れたらと感じました。
+
 
 ## まとめと今後への活かし方について
 
-本書の帯には「見積もりと計画づくりがアジャイルでないのに、プロジェクトがアジャイルであるということはありえない」とありますが、訳者あとがきでは「見積もりと計画づくりをアジャイルに」しさえすれば、プロジェクトがアジャイルになるわけではないと述べられています。
+本記事では、『アジャイルな見積りと計画づくり』を通じて、プロジェクト管理における見積りの重要性やその難しさ、そしてアジャイルなアプローチの利点を再確認しました。特に印象的だったのは、計画そのものではなく、計画づくりの過程を重視する姿勢です。このアプローチは、変化に柔軟に対応し、チーム全体の価値を最大化するための強力なツールとなると感じました。
 
-> 重要なのは、**技術とビジネスの調和**です。開発者には見積もりを出す権利がある一方で、進捗を誠実で透明性のある形で報告する義務があります。顧客やプロダクトオーナーには要求を出す権利がありますが、リリースやイテレーションに収まらない場合には、優先順位を決定する義務もあります。
+
+本書を読む前に、帯に記載のある「見積もりと計画づくりがアジャイルでないのに、プロジェクトがアジャイルであるということはありえない」という言葉を見て印象に残っていました。
+そして本書を読み終えた後、訳者あとがきで「見積もりと計画づくりをアジャイルに」しさえすればプロジェクトがアジャイルになるわけではないと述べられています。
+
+その上でプロジェクトを進めるために大事なことは、**技術とビジネスの調和**と述べています。
+
+> 重要なのは、技術とビジネスの調和です。開発者には見積もりを出す権利がある一方で、進捗を誠実で透明性のある形で報告する義務があります。顧客やプロダクトオーナーには要求を出す権利がありますが、リリースやイテレーションに収まらない場合には、優先順位を決定する義務もあります。
 
 > 見積りと計画づくりはまさに「チームが技術とビジネスの関心事項」を調和させるための場です。そしてアジャイルな見積もりと計画づくりは、これをプロジェクト期間全体を通じて繰り返すことで「調和を日常的に取れるように」する営みです。
 
-果たして、自分は見積りの説明責任を果たすために、誠実で透明性のある進捗を報告できていただろうか？「全員が一丸となって取り組む」チームを目指しての動きがとして何ができるだろうか？
-そう言った処を考えさせられた一冊でした。
 
-イテレーション終了報告書を作ってみようかなと思いました！
+プロジェクト管理は短期的な成果だけでなく、チームの成長を見据えた長期的な視野が必要です。今回の学びを基に、次のチャレンジでもさらに精度の高い見積りと柔軟な計画づくりに挑戦し、チーム全体の成功を目指しましょう。
