--- a/articles/75a34e593989ac.md
+++ b/articles/75a34e593989ac.md
@@ -24,11 +24,12 @@ published: false
 見積もりという作業は、どんなプロジェクトでも避けて通れない課題です。職位や経験に関係なく、プロジェクトに携わるすべての人が直面する挑戦です。
 しかし、まだ行なっていない作業について、具体的な規模や期間を想像して正確に見積もることは、簡単なことではありません。
 
-自身の経験としても例えば、初期の概算見積りから大幅にずれが生じたり、計画がマイルストーン中心となってしまい直近のチームメンバーのモチベーションが低下することがありました。
+自身の経験としても、たとえば、初期の概算見積りから大幅にずれが生じたり、計画がマイルストーン中心となってしまい直近のチームメンバーのモチベーションが低下することがありました。
 
 この経験から、私は見積もりの精度を高めることがプロジェクトの成功に直結する重要な要素であることを痛感しました。最近、以下に挙げたような見積もりに関する記事を目にする機会があり、改めて見積もりの技術や考え方について学び直す必要性を感じました。これにより、今後のプロジェクトでより精緻な見積もりを行い、チームの成功に貢献できると考えています。
 
 また最近以下のような見積もりに関する興味深い記事を拝見する機会があったので、改めて見積もり関して興味を持ち、再度こちらの本を読み直してみようと思いました。
+（対象記事は工数見積もりを行わない開発をどのように行っているかの記事内容となっています）
 
 ### 参考
 [見積せえへんねやったらどうやって予算取りするねんという話](https://note.com/simplearchitect/n/n1415073eb07a)
@@ -53,7 +54,7 @@ published: false
 
 #### 見積もりと計画づくり
 
-見積もりにおいては、不確実性コーンという有名な図があります。（本書の第１章でも触れられています）
+見積もりにおいては、不確実性コーンという有名な図があります。（本書の第1章でも触れられています）
 
 
 ![不確実性コーン](https://storage.googleapis.com/zenn-user-upload/3b483936e68c-20240816.jpg)
@@ -74,7 +75,7 @@ published: false
 - 信頼を確立する
 - 情報を伝達する
 
-特に、「計画」と「計画づくり（planning）」を明確に区別している点が印象的でした。
+とくに、「計画」と「計画づくり（planning）」を明確に区別している点が印象的でした。
 
 > 計画とはドキュメントや図表であり、ある地点でのスナップショットを記録したものだ（p33）
 
@@ -124,10 +125,10 @@ published: false
 
 ## 個人的に記憶に残った箇所
 
-ここからは本書を読んで特に個人的に記憶に残った箇所を記載していこうと思います。
+ここからは本書を読んで、とくに個人的に記憶に残った箇所を記載していこうと思います。
 
 ### スパイク (14章 イテレーション計画づくり)
-調査用タスクの名前を「スパイク」と呼ぶことを、本書で初めて知りました。
+調査用タスクの名前を「スパイク」と呼ぶことを、本書ではじめて知りました。
 個人的にも技術調査をどのような建て付けで行うかは悩むこともあったので、以下のブログ記事が参考になりました。
 （5. スパイクをプロダクトバックログに入れるか、それともバッファのなかで行うか）
 
@@ -149,9 +150,9 @@ published: false
 
 ### プロジェクトバッファ (17章 不確実性に備えるバッファの計画)
 プロジェクトのバッファについて、いつもどの程度のバッファを積めばいいのかが悩みの種でした。  
-これまでは、過去に経験していたプロジェクトなどを参考にしたり、リスク要素を洗い出してどれくらいの大きさになりそうかなど、どちらかというと経験ベースの決め方をしており、何となくモヤっとしてしまっていることが多かったです。
+これまでは、過去に経験していたプロジェクトを参考にしたり、リスク要素を洗い出してどれくらいの大きさになりそうかなど、どちらかというと経験ベースの決め方をしており何となくモヤっとしてしまっていることが多かったです。
 
-そのような中で本書では二乗和平方根法を使ったバッファ計画がお勧めの具体的な手法として紹介されていました。
+そのような中で本書では二乗和平方根法を使ったバッファ計画がオススメの具体的な手法として紹介されていました。
 参考のQitaの記事がまとまっており、分かりやすかったです。計算内容とともに納得感を持って理解することができました。
 
 #### 参考
@@ -163,7 +164,7 @@ published: false
 ガントチャートは、ウォーターフォール型のプロジェクト管理でよく使われるツールであり、固定的なスケジュール管理が求められるため、アジャイルには不向きだとされています。
 しかし、イテレーションの進捗状況を可視化するためには、ガントチャートも有効に活用できる場面があります。
 
-特に、ユーザーストーリーの進捗を管理する際には、ガントチャートが役立つと本書では推奨されています。
+とくに、ユーザーストーリーの進捗を管理する際には、ガントチャートが役立つと本書では推奨されています。
 以下のポイントに注意することで、アジャイルプロジェクトでも効果的にガントチャートを活用できます。
 
 - ガントチャートは、イテレーション期間ごとにユーザーストーリー単位で管理すること。
@@ -184,7 +185,7 @@ published: false
 
 ## まとめと今後への活かし方について
 
-本記事では、『アジャイルな見積りと計画づくり』を通じて、プロジェクト管理における見積りの重要性やその難しさ、そしてアジャイルなアプローチの利点を再確認しました。特に印象的だったのは、計画そのものではなく、計画づくりの過程を重視する姿勢です。このアプローチは、変化に柔軟に対応し、チーム全体の価値を最大化するための強力なツールとなると感じました。
+本記事では、『アジャイルな見積りと計画づくり』を通じて、プロジェクト管理における見積りの重要性やその難しさ、そしてアジャイルなアプローチの利点を再確認しました。とくに印象的だったのは、計画そのものではなく、計画づくりの過程を重視する姿勢です。このアプローチは、変化に柔軟に対応し、チーム全体の価値を最大化するための強力なツールとなると感じました。
 
 
 本書を読む前に、帯に記載のある「見積もりと計画づくりがアジャイルでないのに、プロジェクトがアジャイルであるということはありえない」という言葉を見て印象に残っていました。
