--- a/articles/75a34e593989ac.md
+++ b/articles/75a34e593989ac.md
@@ -26,9 +26,9 @@ published: false
 
 自身の経験としても、たとえば、初期の概算見積りから大幅にずれが生じたり、計画がマイルストーン中心となってしまい直近のチームメンバーのモチベーションが低下することがありました。
 
-この経験から、私は見積もりの精度を高めることがプロジェクトの成功に直結する重要な要素であることを痛感しました。最近、以下に挙げたような見積もりに関する記事を目にする機会があり、改めて見積もりの技術や考え方について学び直す必要性を感じました。これにより、今後のプロジェクトでより精緻な見積もりを行い、チームの成功に貢献できると考えています。
+この経験から、私は見積もりの精度を高めることがプロジェクトの成功に直結する重要な要素であることを痛感しました。最近、以下に挙げたような見積もりに関する記事を目にする機会があり、改めて見積もりの技術や考え方について学び直す必要性を感じました。  
 
-また最近以下のような見積もりに関する興味深い記事を拝見する機会があったので、改めて見積もり関して興味を持ち、再度こちらの本を読み直してみようと思いました。
+また最近以下のような見積もりに関する興味深い記事を拝見する機会があったので、改めて見積もり関して興味を持ち、再度こちらの本を読み直してみようと思いました。  
 （対象記事は工数見積もりを行わない開発をどのように行っているかの記事内容となっています）
 
 ### 参考
@@ -100,6 +100,7 @@ published: false
 アジャイルでは、価値を最大化するために、優先順位を適切につけることが重要です。どのように価値を評価し、計画に反映させるかについての具体的なアプローチが示されています。
 
 こちらの章についてはざっと流し読みをした程度なのですが、優先度付けの具体的な手法が紹介されています。
+複数の優先度付けの手法が載っており参考になったのですが、もう少しプロダクト特性に合った手法決めのような内容についてまとまっている内容が知ることができたらなと感じました。
 
 
 
@@ -112,24 +113,26 @@ published: false
 ### 第5部　トラッキングと情報共有
 この部では、策定したアジャイルな計画をどのように追跡し、ステークホルダーに適切に共有するかがまとめられています。計画が進行する中で、情報の透明性を保ちつつ、進捗を効果的にトラッキングするためのツールや方法が具体的に紹介されています。
 
-こちらについても個人的に課題感を感じている箇所であったため、興味深く読まさせていただきました。
-進捗状況の情報共有は個人的にも課題と感じていた。
-バーンダウンチャートやベロシティレポートなどのアジャイルで良く利用されるレポートが紹介されています。
+こちらについても個人的に課題感を感じている箇所であったため、興味深く読まさせていただきました。進捗状況の情報共有は個人的にも課題と感じていた箇所でした。  
+具体的な手法としては、バーンダウンチャートやベロシティレポートなどのアジャイルで良く利用されるレポートが紹介されています。  
 個人的には次の章にも記載している「イテレーション終了報告書」の作成が印象的でした。
 
 ### 第6部　なぜアジャイルな計画づくりがうまくいくのか
-この部は一章のみで構成されており、第2章で説明された「通常の計画づくりがうまくいかない理由」と対比しながら、アジャイルな計画づくりが成功する理由を解説しています。この章をチェックリストとして活用することで、自分たちの計画がアジャイルなプロセスに沿っているかどうかを確認できる内容となっています。
+この部は一章のみで構成されており、第2章で説明された「通常の計画づくりがうまくいかない理由」と対比しながら、アジャイルな計画づくりが成功する理由を解説しています。  
+この章をチェックリストとして活用することで、自分たちの計画がアジャイルなプロセスに沿っているかどうかを確認できる内容となっています。
 
 ### 第7部　ケーススタディ
-この部では、小説仕立てで具体的なプロジェクト開発が描かれ、これまでの章で紹介された理論や手法がどのように実践されるかが示されています。実際のケースに即した解説が加わることで、理論がどのように現場で活かされるのかが理解しやすくなっています。
+この部では、小説仕立てで具体的なプロジェクト開発が描かれ、これまでの章で紹介された理論や手法がどのように実践されるかが示されています。  
+
+実際のケースに即した解説が加わることで、理論がどのように現場で活かされるのかが理解しやすくなっています。
 
 ## 個人的に記憶に残った箇所
 
 ここからは本書を読んで、とくに個人的に記憶に残った箇所を記載していこうと思います。
 
 ### スパイク (14章 イテレーション計画づくり)
-調査用タスクの名前を「スパイク」と呼ぶことを、本書ではじめて知りました。
-個人的にも技術調査をどのような建て付けで行うかは悩むこともあったので、以下のブログ記事が参考になりました。
+調査用タスクの名前を「スパイク」と呼ぶことを、本書ではじめて知りました。  
+個人的にも技術調査をどのような建て付けで行うかは悩むこともあったので、以下のブログ記事が参考になりました。  
 （5. スパイクをプロダクトバックログに入れるか、それともバッファのなかで行うか）
 
 #### 参考
@@ -138,11 +141,11 @@ published: false
 
 ### コミットメント駆動のイテレーションプランニング (14章 イテレーション計画づくり)
 
-イテレーションの計画には、主に2つのアプローチが紹介されています。
-過去の実績からタスク量を決定する「ベロシティ駆動プランニング」と、チーム全体で合意できる範囲でタスクを設定する「コミットメント駆動プランニング」です。
+イテレーションの計画には、主に2つのアプローチが紹介されています。  
+過去の実績からタスク量を決定する「ベロシティ駆動プランニング」と、チーム全体で合意できる範囲でタスクを設定する「コミットメント駆動プランニング」です。  
 
-一般的には「ベロシティ駆動」が広く採用されていますが、著者は「コミットメント駆動」を推奨しています。
-これは、ベロシティが概算であり、実際のイテレーション中に消化しきれないチケットが生じる可能性があるためです。
+一般的には「ベロシティ駆動」が広く採用されていますが、著者は「コミットメント駆動」を推奨しています。  
+これは、ベロシティが概算であり、実際のイテレーション中に消化しきれないチケットが生じる可能性があるためです。  
 リリース計画にはベロシティが適していますが、イテレーション計画には、チームがコミットできる範囲で計画を立てる方が現実的である旨が述べられていました。
 
 プロジェクトの特性やチームの成熟度に依る部分もあるとはいえ、このような複数のプランニング方法があるということは大きな学びでした。
@@ -152,8 +155,9 @@ published: false
 プロジェクトのバッファについて、いつもどの程度のバッファを積めばいいのかが悩みの種でした。  
 これまでは、過去に経験していたプロジェクトを参考にしたり、リスク要素を洗い出してどれくらいの大きさになりそうかなど、どちらかというと経験ベースの決め方をしており何となくモヤっとしてしまっていることが多かったです。
 
-そのような中で本書では二乗和平方根法を使ったバッファ計画がオススメの具体的な手法として紹介されていました。
-参考のQitaの記事がまとまっており、分かりやすかったです。計算内容とともに納得感を持って理解することができました。
+そのような中で本書では二乗和平方根法を使ったバッファ計画がオススメの具体的な手法として紹介されていました。  
+参考のQitaの記事がまとまっており、分かりやすかったです。計算内容とともに納得感を持って理解することができました。  
+
 
 #### 参考
 [[スケジュールに乗せるバッファはどれぐらいが適切か？ - 二乗和平方根法（SRSS法）](https://qiita.com/Hiraku/items/c29ca383fbef8eb38fd2)
@@ -161,41 +165,46 @@ published: false
 
 ### ガントチャート (21章 計画とコミュニケーション)
 
-ガントチャートは、ウォーターフォール型のプロジェクト管理でよく使われるツールであり、固定的なスケジュール管理が求められるため、アジャイルには不向きだとされています。
-しかし、イテレーションの進捗状況を可視化するためには、ガントチャートも有効に活用できる場面があります。
+ガントチャートは、ウォーターフォール型のプロジェクト管理でよく使われるツールであり、固定的なスケジュール管理が求められるため、アジャイルには不向きだとされています。  
+しかし、イテレーションの進捗状況を可視化するためには、ガントチャートも有効に活用できる場面があるという紹介がされていました。
 
-とくに、ユーザーストーリーの進捗を管理する際には、ガントチャートが役立つと本書では推奨されています。
+とくに、ユーザーストーリーの進捗を管理する際には、ガントチャートが役立つと本書では推奨されています。  
 以下のポイントに注意することで、アジャイルプロジェクトでも効果的にガントチャートを活用できます。
 
 - ガントチャートは、イテレーション期間ごとにユーザーストーリー単位で管理すること。
 - 担当者をガントチャートに割り振らないこと。
 
-これらのガイドラインを守ることで、ガントチャートをアジャイルにおける柔軟なスケジュール管理ツールとして利用できます。
+アジャイル開発とガントチャートの相性は個人的にも良くないと思っていたので、上記のようなアプローチを通じてうまくツールとして活用していければと思いました。
 
+Jiraのタイムライン機能も本書に記載していた内容  
+https://www.atlassian.com/ja/software/jira/guides/basic-roadmaps/tutorials#share-and-export
 
 ### イテレーション終了報告書 (21章 計画とコミュニケーション)
 
-イテレーション終了報告書は、チームの進捗状況をまとめ、ステークホルダーに最新情報を伝えるための重要なツールです。
-この報告書には、日程、要員、指標、実施内容、評価などが記載され、プロジェクトの透明性を高める役割を果たします。
+イテレーション終了報告書は、チームの進捗状況をまとめ、ステークホルダーに最新情報を伝えるための重要なツールです。  
+この報告書には、日程、要員、指標、実施内容、評価などが記載され、プロジェクトの透明性を高める役割を果たします。  
 
-著者は、この報告書の作成は必須ではないが、作成することでステークホルダーとの信頼関係を強化できると述べています。
-さらに、週あたり15分程度の時間で作成可能であるため、負担なく導入できる点も魅力です。
-この手軽さから、イテレーションの振り返りとともに報告書の作成を取り入れて、チームとステークホルダーの間でより効果的なコミュニケーションを図れたらと感じました。
+著者は、この報告書の作成は必須ではないが、作成することでステークホルダーとの信頼関係を強化できると述べています。  
+さらに、週あたり15分程度の時間で作成可能であるため、負担なく導入できる点も魅力的だと思います。  
+
+この手軽さからイテレーションの振り返りとともに報告書の作成を取り入れて、チームとステークホルダーの間でより効果的なコミュニケーションを図れるような活用ができたらと考えています。
 
 
 ## まとめと今後への活かし方について
 
-本記事では、『アジャイルな見積りと計画づくり』を通じて、プロジェクト管理における見積りの重要性やその難しさ、そしてアジャイルなアプローチの利点を再確認しました。とくに印象的だったのは、計画そのものではなく、計画づくりの過程を重視する姿勢です。このアプローチは、変化に柔軟に対応し、チーム全体の価値を最大化するための強力なツールとなると感じました。
+本記事では、『アジャイルな見積りと計画づくり』を通じて、プロジェクト管理における見積りの重要性やその難しさ、そしてアジャイルなアプローチの利点を再確認しました。  
+とくに印象的だったのは、計画そのものではなく、計画づくりの過程を重視する姿勢です。このアプローチは、変化に柔軟に対応し、チーム全体の価値を最大化するための強力なツールとなると感じました。
 
 
-本書を読む前に、帯に記載のある「見積もりと計画づくりがアジャイルでないのに、プロジェクトがアジャイルであるということはありえない」という言葉を見て印象に残っていました。
-そして本書を読み終えた後、訳者あとがきで「見積もりと計画づくりをアジャイルに」しさえすればプロジェクトがアジャイルになるわけではないと述べられています。
+本書を読む前に、帯に記載のある「見積もりと計画づくりがアジャイルでないのに、プロジェクトがアジャイルであるということはありえない」という言葉を見て印象に残っていました。  
+そして本書を読み終えた後、訳者あとがきで「見積もりと計画づくりをアジャイルに」しさえすればプロジェクトがアジャイルになるわけではないと、逆は成り立たないよという旨の内容が述べられています。
 
-その上でプロジェクトを進めるために大事なことは、**技術とビジネスの調和**と述べています。
+その上でプロジェクトを進めるために大事なことは、**技術とビジネスの調和**と記載がありました。
 
 > 重要なのは、技術とビジネスの調和です。開発者には見積もりを出す権利がある一方で、進捗を誠実で透明性のある形で報告する義務があります。顧客やプロダクトオーナーには要求を出す権利がありますが、リリースやイテレーションに収まらない場合には、優先順位を決定する義務もあります。
 
 > 見積りと計画づくりはまさに「チームが技術とビジネスの関心事項」を調和させるための場です。そしてアジャイルな見積もりと計画づくりは、これをプロジェクト期間全体を通じて繰り返すことで「調和を日常的に取れるように」する営みです。
 
 
-プロジェクト管理は短期的な成果だけでなく、チームの成長を見据えた長期的な視野が必要です。今回の学びを基に、次のチャレンジでもさらに精度の高い見積りと柔軟な計画づくりに挑戦し、チーム全体の成功を目指しましょう。
+プロジェクト管理は短期的な成果だけでなく、チームの成長を見据えた長期的な視野が必要です。  
+今回の学びを基に、次のチャレンジでもさらに精度の高い見積りと柔軟な計画づくりに挑戦し、チーム全体の成功を目指していきたいと思います！
